--- a/aiverify-portal/.eslintrc.json
+++ b/aiverify-portal/.eslintrc.json
@@ -60,5 +60,21 @@
     //     "patterns": ["../"]
     //   }
     // ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/__test__/**/*.{ts,tsx}", "**/*.test.{ts,tsx}", "**/*.spec.{ts,tsx}"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+        ],
+        "react/display-name": "off",
+        "@typescript-eslint/no-inferrable-types": "warn",
+        "@typescript-eslint/no-require-imports": "warn",
+        "import/order": "warn"
+      }
+    }
+  ]
 }
