upgrade brace expansion to 2.0.2

--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -68,6 +68,7 @@
     "typescript": "^5"
   },
   "overrides": {
-    "cross-spawn": "^7.0.5"
+    "cross-spawn": "^7.0.5",
+    "brace-expansion": "^2.0.2"
   }
 }
