--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           docker stop $(docker ps -q)
           docker system prune -a -f
-          docker volumer prune -a -f
+          docker volume prune -a -f
 
       # List Current Containers and Volumes
       - name: List Current Docker Volumes
