Change Concurrency Group for Integration Test Workflow

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -26,7 +26,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: ${{ github.repository }}-${{ github.workflow }}
+  group: automated-testing
   cancel-in-progress: false
 
 jobs:
