Update APIGW and Standalone Integration Test Condition to run always regardless of UI Test Condition Test Case Status

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -121,6 +121,7 @@ jobs:
 
       # Run API Integration Test
       - name: Run API Integration Test
+        if: always()
         run: |
           cd integration-testing
           npm install
