Add Always Conditional Statement to Standalone Plugin Step

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -130,6 +130,7 @@ jobs:
 
       # Run Standalone Plugin Integration Test
       - name: Run Standalone Plugin Integration Test
+        if: always()
         run: |
           cd integration-testing/standalone-plugins
           pip install pytest 
