--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -95,7 +95,7 @@ jobs:
 
       # Upload Playwright Traces
       - name: Upload Playwright Traces
-        if: always()
+        if: ${{ failure() }}
         uses: actions/upload-artifact@v4
         with:
           name: playwright-trace-v2.0-smoke-testing-${{ github.run_id }}
