--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -48,7 +48,7 @@ jobs:
       - name: List All Files
         run: |
           ls -la
-          chmod -R u+rwX .
+          sudo chmod -R u+rwX .
           ls -la
 
       # Checkout AI Verify
