Change Mod to 777

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: List All Files
         run: |
           ls -la
-          sudo chown -R github .
+          sudo chmod -R 777 .
           ls -la
 
       # Checkout Code (Workflow Dispatch)
