Add Pytest Verbose Mode For Debug

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -152,4 +152,4 @@ jobs:
           cd integration-testing/tests/standalone-plugins
           python3 -m venv .venv
           pip install pytest requests
-          pytest .
+          pytest -vv
