Comment Out Docker Build Portion

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -79,12 +79,12 @@ jobs:
           docker builder prune -a -f
 
       # Launch containers in Docker Compose
-      - name: Run images in Docker Compose
-        run: |
-          cd deployment/docker-compose-dev
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
-          echo "Initialising AI Verify Plugins"
-          sleep 5m
+      # - name: Run images in Docker Compose
+      #   run: |
+      #     cd deployment/docker-compose-dev
+      #     COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
+      #     echo "Initialising AI Verify Plugins"
+      #     sleep 5m
 
        # Prepare Integration Test Data
       - name: Prepare Integration Test Data
