--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -146,12 +146,12 @@ jobs:
           URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
 
       # Run Standalone Plugin Integration Test
-      - name: Run Standalone Plugin Integration Test
-        if: always()
-        run: |
-          cd integration-testing/tests/standalone-plugins
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install pytest requests
-          pytest -vv
-        shell: bash
+      # - name: Run Standalone Plugin Integration Test
+      #   if: always()
+      #   run: |
+      #     cd integration-testing/tests/standalone-plugins
+      #     python -m venv .venv
+      #     source .venv/bin/activate
+      #     pip install pytest requests
+      #     pytest -vv
+      #   shell: bash
