change python base to aiverify-python-base istead of ghcr.io/aiverify-foundation/aiverify-python-base

--- a/aiverify-apigw/Dockerfile
+++ b/aiverify-apigw/Dockerfile
@@ -4,7 +4,7 @@
 ##
 
 # Stage 1: Build stage
-FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
+FROM aiverify-python-base AS build
 
 RUN apt-get update && \
     apt-get upgrade -y && \
@@ -14,7 +14,7 @@ RUN apt-get update && \
 
 
 # install node
-RUN curl -fsSL https://deb.nodesource.com/setup_23.x -o nodesource_setup.sh && \
+RUN curl -fsSL https://deb.nodesource.com/setup_24.x -o nodesource_setup.sh && \
     bash nodesource_setup.sh && \
     apt-get install -y nodejs && \
     apt-get clean && \
@@ -30,41 +30,45 @@ COPY aiverify-shared-library/ ./aiverify-shared-library/
 WORKDIR /app/aiverify-shared-library
 RUN npm install && npm run build
 
+# link to shared library
+# WORKDIR /app/aiverify-apigw/aiverify-apigw-node
+# RUN npm install ../../aiverify-shared-library
+
 # build the application
 WORKDIR /app/aiverify-apigw
 RUN pip install -e . && \
+    pip install "../aiverify-test-engine[all]" && \
     cd aiverify-apigw-node && \
-    npm install
-    # npm link ../../aiverify-shared-library
+    npm install && \
+    npm install ../../aiverify-shared-library
 
 # Stage 2: Runtime stage
-FROM ghcr.io/aiverify-foundation/aiverify-python-base
+FROM aiverify-python-base
 
 # Create a non-root user
 RUN useradd -m appuser
 
 # update the installed packages to latest versions
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && \
+#     apt-get upgrade -y && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
 # Copy only the necessary files from the build stage
 WORKDIR /app
+# COPY --from=build /app .
+# COPY --from=build /app/aiverify-test-engine ./aiverify-test-engine
+# COPY --from=build /app/common ./common
 COPY --from=build /app/aiverify-apigw ./aiverify-apigw
 COPY --from=build /app/stock-plugins ./stock-plugins
 COPY --from=build /app/aiverify-shared-library/dist ./aiverify-shared-library/dist
-# COPY --from=build /app/aiverify-shared-library/node_modules ./aiverify-shared-library/node_modules
 COPY --from=build /app/aiverify-shared-library/package.json ./aiverify-shared-library/package.json
+
 COPY --from=build /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
 
 # Get NodeJS and npm
-COPY --from=node:23-slim /usr/local/bin /usr/local/bin
-COPY --from=node:23-slim /usr/local/lib/node_modules /usr/local/lib/node_modules
-
-# link to shared library
-WORKDIR /app/aiverify-apigw/aiverify-apigw-node
-RUN npm link ../../aiverify-shared-library
+COPY --from=node:24-slim /usr/local/bin /usr/local/bin
+COPY --from=node:24-slim /usr/local/lib/node_modules /usr/local/lib/
 
 # Change ownership of the application and directory
 RUN mkdir /data && chown -R appuser:appuser /data && chown -R appuser:appuser /app
@@ -74,9 +78,6 @@ USER appuser
 
 # Run the application
 WORKDIR /app/aiverify-apigw
-
-# Link to aiverify-test-engine
-RUN pip install -e ../aiverify-test-engine[all]
 
 ENV APIGW_LOG_LEVEL="debug"
 ENV APIGW_DATA_DIR="/data"
