--- a/aiverify-test-engine/pyproject.toml
+++ b/aiverify-test-engine/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "referencing==0.33.0",
     "rpds-py==0.17.1",
     "setuptools>=78.1.1",
-    "requests==2.32.3",
+    "requests>=2.32.4",
     "pydantic==2.*",
 ]
 readme = "README.md"
